# io-culprit

./: .gitignore  Cargo.toml  README.md  verify.sh
.github/workflows/: build.yml
config/: config.yaml
src/: config.rs  lib.rs  models.rs
src/report/: classifier.rs  json.rs  loader.rs  mod.rs  scorer.rs  terminal.rs
src/watchdog/: lifecycle.rs  mod.rs  proc.rs  snapshot.rs  trigger.rs
systemd/: io-watchdog.service
tests/: config_tests.rs  proc_tests.rs  report_tests.rs  snapshot_tests.rs  trigger_tests.rs
