[package]
name = "io-culprit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "io_culprit"
path = "src/lib.rs"

[[bin]]
name = "io-watchdog"
path = "src/bin/io-watchdog.rs"

[[bin]]
name = "io-report"
path = "src/bin/io-report.rs"
